[project]
name = "pyttb"
dynamic = ["version"]
description = "Python Tensor Toolbox"
authors = [
  {name="Daniel M. Dunlavy", email="dmdunla@sandia.gov"},
]
license = { text="BSD 2-Clause License" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy<2.4,>=1.24",
    "numpy_groupies>0.11",
    "scipy<1.17,>1.9",
    "matplotlib>3.7",
]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
homepage = "https://github.com/sandialabs/pyttb"
coverage = "https://coveralls.io/github/sandialabs/pyttb"
documentation = "https://pyttb.readthedocs.io"

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<1.16.0",
    # Also in pre-commit
    "nbstripout>=0.8,<0.9",
    "pytest>8.0",
    "pytest-cov>5.0",
    # Also in pre-commit
    "ruff>=0.12,<0.13",
    "pre-commit>=4.0,<5.0",
    "codespell>=2.3.0,<2.4.0"
]
doc = [
    "sphinx >= 4.0",
    "sphinx_rtd_theme>2.0",
    "myst-nb>1.0",
]
profiling = [
    "gprof2dot",
    "graphviz",
]

[tool.setuptools.packages.find]
include = ["pyttb*"]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "pyttb.__version__"}

[tool.setuptools.package-data]
"pyttb" = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "numpy", "numpy_groupies", "scipy", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E", "F", "PL", "W", "I", "N", "NPY", "RUF", "B", "D", "FA", "UP", "TC", "ARG", "PIE"]
ignore = [
    # Ignored in conversion to ruff since not previously enforced
    "PLR2004",
    # Lower case in function, matching MATLAB names
    "N806",
    # Argument name lower case, matching MATLAB names
    "N803",
    # Class name not CapWords, matching MATLAB names
    "N801",
    # Numpy legacy random transition is a TODO
    "NPY002",
    # See #184 for issue related to asserts
    "B011",
    # There is ongoing discussion about logging/warning etc
    "B028",
    # Personal preference on magic method
    "D105",
    # Rule removed in newer version of ruff
    "UP038",
]
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# See  see https://github.com/astral-sh/ruff/issues/3172 for details on this becoming simpler

# Everything but I, F (to catch import mess and potential logic errors)
"tests/**.py" = ["E", "PL", "W", "N", "NPY", "RUF", "B", "D"]
# Ignore everything for now
"docs/**.py" = ["E", "F", "PL", "W", "N", "NPY", "RUF", "B", "D"]
"docs/**.ipynb" = ["E", "F", "PL", "W", "N", "NPY", "RUF", "B", "D"]
"profiling/**.ipynb" = ["E", "F", "PL", "W", "N", "NPY", "RUF", "B", "D"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.mypy]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "scipy",
    "scipy.sparse",
    "scipy.sparse.linalg",
    "scipy.optimize",
    "numpy_groupies"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules pyttb"
filterwarnings = [
    "ignore:.*deprecated.*:"
]

[tool.codespell]
skip = [
    # Built documentation
    "./docs/build",
    "./docs/jupyter_execute",
    # Project build artifacts
    "./build"
]
count = true
ignore-words-list = [
    # Conventions carried from MATLAB ttb (consider changing)
    "ans",
    "siz",
    # Tensor/repo Nomenclature
    "COO",
    "nd",
    "als",
]
